# voluta

./: .gitignore  Makefile.am  README.md  TODO  astyleall.sh  checkstyle.sh  common.mk.in  configure.ac  devel.mk  makedevel.mk  makefile  version.sh
doc/html/: Makefile.am  buildhtml.sh  index.html.in  voluta.css  voluta.rst
doc/man/: Makefile.am  voluta-mountd.8.rst  voluta.1.rst
docs/: index.html  voluta.html
include/: Makefile.am
include/linux/: .gitignore
include/voluta/: avl.h  cmd.h  consts.h  core.h  defs.h  errors.h  extern.h  fs.h  infra.h  ioctls.h  list.h  macros.h  minmax.h  mntd.h  pipe.h  qalloc.h  socket.h  strings.h  syscall.h  types.h  utility.h  version.h  voluta.h
include/voluta/core/: address.h  cache.h  mpool.h  private.h
include/voluta/fs/: address.h  archive.h  boot.h  bstore.h  cache.h  crypto.h  dir.h  exec.h  file.h  fuseq.h  init.h  inode.h  itable.h  locosd.h  losd.h  losdc.h  mount.h  mpool.h  namei.h  nodes.h  opers.h  osdc.h  private.h  pstore.h  repo.h  spmaps.h  super.h  superb.h  symlink.h  types.h  vstore.h  xattr.h
include/voluta/infra/: avl.h  consts.h  errors.h  fiovec.h  list.h  logging.h  macros.h  pipe.h  qalloc.h  random.h  slice.h  socket.h  strings.h  syscall.h  thread.h  time.h  utility.h  version.h
lib/: Makefile.am  aliases.h  archive.c  avl.c  blobify.c  cache.c  crypto.c  dir.c  execfs.c  file.c  flushq.c  fuseq.c  guarantee.c  init.c  inlines.h  inode.c  itable.c  libvoluta.h  list.c  mntsrv.c  mpool.c  namei.c  opers.c  panic.c  pipe.c  pstore.c  qalloc.c  socket.c  spmaps.c  strings.c  super.c  symlink.c  syscall.c  syscallx.c  thread.c  utility.c  verify.c  version.c  vnode.c  vstore.c  (+2 more)
m4/: voluta_args.m4  voluta_configh.m4  voluta_funcs.m4  voluta_globals.m4  voluta_libs.m4  voluta_progs.m4  voluta_systemd.m4
misc/: Makefile.am  checkcstyle.py  clangscanbuild.sh  clangtidycheck.sh  findtodo.sh  fio2csv.sh  fiocsv2bwplot.py  fiocsv2plot.py  installdeps.sh  torturefs.sh  voluta-gdb-bt.sh
misc/completions/: Makefile.am  voluta
misc/systemd/: Makefile.am  voluta-mountd.service.in
pkg/: packagize-deb.sh  packagize-rpm.sh  packagize.sh
pkg/deb/: changelog.in  copyright
pkg/rpm/: voluta.spec.in
src/: Makefile.am  archive.c  clone.c  common.c  decrypt.c  encrypt.c  export.c  fsck.c  getpass.c  import.c  main.c  mkfs.c  mntconf.c  mount.c  mount.voluta  mountd.c  mountd.conf.in  query.c  restore.c  show.c  umount.c  voluta-prog.h
src/cmd/: Makefile.am  clone.c  common.c  fsck.c  fsck.voluta  getpass.c  main.c  mkfs.c  mount.c  mount.voluta  prune.c  repo.c  show.c  snap.c  umount.c
src/core/: Makefile.am  address.c  aliases.h  archive.c  boot.c  cache.c  crypto.c  dir.c  execfs.c  file.c  fuseq.c  guarantee.c  init.c  inlines.h  inode.c  itable.c  libvoluta.h  mntsrv.c  mpool.c  namei.c  opers.c  pstore.c  qalloc.c  repo.c  spmaps.c  super.c  symlink.c  thread.c  utility.c  vstore.c  xattr.c  zboot.c
src/fs/: Makefile.am  address.c  archive.c  boot.c  bstore.c  cache.c  crypto.c  dir.c  exec.c  file.c  fuseq.c  init.c  inode.c  itable.c  locosd.c  losd.c  losdc.c  mount.c  mpool.c  namei.c  nodes.c  opers.c  osdc.c  pstore.c  repo.c  spmaps.c  super.c  superb.c  symlink.c  vstore.c  xattr.c
src/infra/: Makefile.am  avl.c  fiovec.c  list.c  logging.c  minmax.c  panic.c  pipe.c  qalloc.c  random.c  slice.c  socket.c  strings.c  syscall.c  syscallx.c  thread.c  time.c  utility.c  version.c
src/lib/: Makefile.am  address.c  aliases.h  archive.c  cache.c  crypto.c  dir.c  execfs.c  file.c  fuseq.c  guarantee.c  inlines.h  itable.c  libvoluta.h  pipe.c  pstore.c  socket.c  spmaps.c  super.c  symlink.c  syscall.c  syscallx.c  vstore.c  xattr.c  zboot.c
src/mntd/: Makefile.am  mntconf.c  mountd.c
src/mountd/: mntconf.c  mountd.c  mountd.conf.in  mountd.h
src/prog/: Makefile.am  clone.c  common.c  decrypt.c  export.c  fsck.c  import.c  main.c  mkfs.voluta  mntconf.c  mount.c  show.c  umount.c  voluta-prog.h
src/test/fstests/: Makefile.am  fstests.h  fstests_exec.c  test_access.c  test_fallocate.c  test_open.c  test_rename.c  test_rw_large.c  test_rw_sequential.c  test_symlink.c  test_tmpfile.c  test_write.c
src/test/unitest/: Makefile.am  unitest.h  unitest_exec.c  unitest_ops.c  ut_alloc.c  ut_fillfs.c  (+9 more)
test/: Makefile.am
test/fstests/: Makefile.am  fstests.h  fstests_exec.c  fstests_main.c  fstests_syscall.c  fstests_utility.c  test_boundaries.c  test_chmod_chown.c  test_clone.c  test_copy_file_range.c  test_create.c  test_fallocate.c  test_fiemap.c  test_fifo.c  test_fsync.c  test_link.c  test_lseek.c  test_mkdir.c  test_mmap.c  test_namespace.c  test_open.c  test_readdir.c  test_rename.c  test_rw_basic.c  test_rw_large.c  test_rw_random.c  test_rw_sequential.c  test_rw_sparse.c  test_stat.c  test_stat_io.c  test_statvfs.c  test_tmpfile.c  test_truncate.c  test_truncate_file.c  test_unlink.c  test_unlinked_file.c  test_utimes.c  test_write.c  test_xattr.c
test/unitest/: Makefile.am  unitest.h  unitest_exec.c  unitest_main.c  unitest_ops.c  ut_alloc.c  ut_archive.c  ut_avl.c  ut_dir_basic.c  ut_dir_iter.c  ut_dir_list.c  ut_file_basic.c  ut_file_copyrange.c  ut_file_edges.c  ut_file_falloc.c  ut_file_fiemap.c  ut_file_lseek.c  ut_file_random.c  ut_file_ranges.c  ut_file_records.c  ut_file_stat.c  ut_file_trunc.c  ut_fillfs.c  ut_ioctl.c  ut_namei.c  ut_recrypt.c  ut_reload.c  ut_rename.c  ut_strings.c  ut_super.c  ut_symlink.c  ut_xattr.c
test/vfstest/: Makefile.am  test_access.c  test_boundaries.c  test_chmod_chown.c  test_clone.c  test_copy_file_range.c  test_create.c  test_fallocate.c  test_fiemap.c  test_fifo.c  test_fsync.c  test_link.c  test_lseek.c  test_mkdir.c  test_mmap.c  test_namespace.c  test_open.c  test_readdir.c  test_rename.c  test_rw_basic.c  test_rw_large.c  test_rw_random.c  test_rw_sequential.c  test_rw_sparse.c  test_stat.c  test_stat_io.c  test_statvfs.c  test_symlink.c  test_tmpfile.c  test_truncate.c  test_truncate_file.c  test_unlink.c  test_unlinked_file.c  test_utimes.c  test_write.c  test_xattr.c  vfstest.h  vfstest_exec.c  vfstest_execute.c  vfstest_main.c  (+2 more)
