-include $(top_builddir)/common.mk

nobase_include_HEADERS = $(NULL)
nobase_include_HEADERS += voluta/infra/avl.h
nobase_include_HEADERS += voluta/infra/consts.h
nobase_include_HEADERS += voluta/infra/errors.h
nobase_include_HEADERS += voluta/infra/fiovec.h
nobase_include_HEADERS += voluta/infra/list.h
nobase_include_HEADERS += voluta/infra/logging.h
nobase_include_HEADERS += voluta/infra/macros.h
nobase_include_HEADERS += voluta/infra/pipe.h
nobase_include_HEADERS += voluta/infra/qalloc.h
nobase_include_HEADERS += voluta/infra/random.h
nobase_include_HEADERS += voluta/infra/slice.h
nobase_include_HEADERS += voluta/infra/socket.h
nobase_include_HEADERS += voluta/infra/strings.h
nobase_include_HEADERS += voluta/infra/syscall.h
nobase_include_HEADERS += voluta/infra/thread.h
nobase_include_HEADERS += voluta/infra/time.h
nobase_include_HEADERS += voluta/infra/utility.h
nobase_include_HEADERS += voluta/infra/version.h
nobase_include_HEADERS += voluta/infra.h

nobase_include_HEADERS += voluta/fs/address.h
nobase_include_HEADERS += voluta/fs/archive.h
nobase_include_HEADERS += voluta/fs/boot.h
nobase_include_HEADERS += voluta/fs/cache.h
nobase_include_HEADERS += voluta/fs/crypto.h
nobase_include_HEADERS += voluta/fs/dir.h
nobase_include_HEADERS += voluta/fs/exec.h
nobase_include_HEADERS += voluta/fs/file.h
nobase_include_HEADERS += voluta/fs/fuseq.h
nobase_include_HEADERS += voluta/fs/init.h
nobase_include_HEADERS += voluta/fs/inode.h
nobase_include_HEADERS += voluta/fs/itable.h
nobase_include_HEADERS += voluta/fs/mount.h
nobase_include_HEADERS += voluta/fs/mpool.h
nobase_include_HEADERS += voluta/fs/namei.h
nobase_include_HEADERS += voluta/fs/opers.h
nobase_include_HEADERS += voluta/fs/private.h
nobase_include_HEADERS += voluta/fs/pstore.h
nobase_include_HEADERS += voluta/fs/repo.h
nobase_include_HEADERS += voluta/fs/spmaps.h
nobase_include_HEADERS += voluta/fs/super.h
nobase_include_HEADERS += voluta/fs/symlink.h
nobase_include_HEADERS += voluta/fs/types.h
nobase_include_HEADERS += voluta/fs/vstore.h
nobase_include_HEADERS += voluta/fs/xattr.h
nobase_include_HEADERS += voluta/fs.h

nobase_include_HEADERS += voluta/defs.h
nobase_include_HEADERS += voluta/ioctls.h

noinst_HEADERS = config.h

