-include $(top_builddir)/common.mk

nobase_include_HEADERS = $(NULL)
nobase_include_HEADERS += voluta/avl.h
nobase_include_HEADERS += voluta/consts.h
nobase_include_HEADERS += voluta/defs.h
nobase_include_HEADERS += voluta/errors.h
nobase_include_HEADERS += voluta/extern.h
nobase_include_HEADERS += voluta/fiovec.h
nobase_include_HEADERS += voluta/ioctls.h
nobase_include_HEADERS += voluta/list.h
nobase_include_HEADERS += voluta/logging.h
nobase_include_HEADERS += voluta/macros.h
nobase_include_HEADERS += voluta/minmax.h
nobase_include_HEADERS += voluta/qalloc.h
nobase_include_HEADERS += voluta/socket.h
nobase_include_HEADERS += voluta/strings.h
nobase_include_HEADERS += voluta/syscall.h
nobase_include_HEADERS += voluta/thread.h
nobase_include_HEADERS += voluta/types.h
nobase_include_HEADERS += voluta/utility.h
nobase_include_HEADERS += voluta/version.h
nobase_include_HEADERS += voluta/voluta.h

noinst_HEADERS = config.h

