-include $(top_builddir)/common.mk

nobase_include_HEADERS = $(NULL)
nobase_include_HEADERS += voluta/infra/avl.h
nobase_include_HEADERS += voluta/infra/consts.h
nobase_include_HEADERS += voluta/infra/errors.h
nobase_include_HEADERS += voluta/infra/fiovec.h
nobase_include_HEADERS += voluta/infra/list.h
nobase_include_HEADERS += voluta/infra/logging.h
nobase_include_HEADERS += voluta/infra/macros.h
nobase_include_HEADERS += voluta/infra/pipe.h
nobase_include_HEADERS += voluta/infra/qalloc.h
nobase_include_HEADERS += voluta/infra/random.h
nobase_include_HEADERS += voluta/infra/slice.h
nobase_include_HEADERS += voluta/infra/socket.h
nobase_include_HEADERS += voluta/infra/strings.h
nobase_include_HEADERS += voluta/infra/syscall.h
nobase_include_HEADERS += voluta/infra/thread.h
nobase_include_HEADERS += voluta/infra/time.h
nobase_include_HEADERS += voluta/infra/utility.h
nobase_include_HEADERS += voluta/infra/version.h
nobase_include_HEADERS += voluta/infra.h

nobase_include_HEADERS += voluta/core/address.h
nobase_include_HEADERS += voluta/core/cache.h
nobase_include_HEADERS += voluta/core/init.h
nobase_include_HEADERS += voluta/core/private.h
nobase_include_HEADERS += voluta/core/repo.h
nobase_include_HEADERS += voluta/core/types.h
nobase_include_HEADERS += voluta/core.h

nobase_include_HEADERS += voluta/defs.h
nobase_include_HEADERS += voluta/extern.h
nobase_include_HEADERS += voluta/ioctls.h
nobase_include_HEADERS += voluta/voluta.h

noinst_HEADERS = config.h

