-include $(top_builddir)/common.mk

libvolutadir = $(libdir)
libvoluta_LTLIBRARIES = libvoluta.la
libvoluta_la_LDFLAGS = $(NULL)
libvoluta_la_LDFLAGS += $(PTHREAD_CFLAGS) $(PTHREAD_DEF)
libvoluta_la_LDFLAGS += -L$(top_builddir)/lib -version-info 0
libvoluta_la_CPPFLAGS = $(NULL)
libvoluta_la_CPPFLAGS += -I$(top_srcdir)/include
libvoluta_la_CPPFLAGS += -DVOLUTA_LIBPRIVATE=1
libvoluta_la_LIBADD = @LIBS@
libvoluta_la_LIBADD += $(PTHREAD_LIBS)
libvoluta_la_SOURCES = $(NULL)
libvoluta_la_SOURCES += aliases.h
libvoluta_la_SOURCES += archive.c
libvoluta_la_SOURCES += avl.c
libvoluta_la_SOURCES += cache.c
libvoluta_la_SOURCES += crypto.c
libvoluta_la_SOURCES += dir.c
libvoluta_la_SOURCES += execfs.c
libvoluta_la_SOURCES += file.c
libvoluta_la_SOURCES += fuseq.c
libvoluta_la_SOURCES += guarantee.c
libvoluta_la_SOURCES += init.c
libvoluta_la_SOURCES += inlines.h
libvoluta_la_SOURCES += inode.c
libvoluta_la_SOURCES += itable.c
libvoluta_la_SOURCES += libvoluta.h
libvoluta_la_SOURCES += list.c
libvoluta_la_SOURCES += mntsrv.c
libvoluta_la_SOURCES += mpool.c
libvoluta_la_SOURCES += namei.c
libvoluta_la_SOURCES += opers.c
libvoluta_la_SOURCES += panic.c
libvoluta_la_SOURCES += pipe.c
libvoluta_la_SOURCES += pstore.c
libvoluta_la_SOURCES += qalloc.c
libvoluta_la_SOURCES += socket.c
libvoluta_la_SOURCES += spmaps.c
libvoluta_la_SOURCES += strings.c
libvoluta_la_SOURCES += super.c
libvoluta_la_SOURCES += symlink.c
libvoluta_la_SOURCES += syscall.c
libvoluta_la_SOURCES += syscallx.c
libvoluta_la_SOURCES += thread.c
libvoluta_la_SOURCES += utility.c
libvoluta_la_SOURCES += version.c
libvoluta_la_SOURCES += vstore.c
libvoluta_la_SOURCES += xattr.c
libvoluta_la_SOURCES += zboot.c
