-include $(top_builddir)/common.mk
SUBDIRS = completions systemd

EXTRA_DIST = $(NULL)
EXTRA_DIST += checkcstyle.py
EXTRA_DIST += clangscanbuild.py
EXTRA_DIST += clangtidycheck.sh
EXTRA_DIST += ddreadwrite.sh
EXTRA_DIST += findtodo.sh
EXTRA_DIST += fio2csv.sh
EXTRA_DIST += fiocsv2plot.py
EXTRA_DIST += fsstress.sh
EXTRA_DIST += gitarchive.sh
EXTRA_DIST += installdeps.sh
EXTRA_DIST += torturefs.sh
EXTRA_DIST += valgrind-memcheck.sh
EXTRA_DIST += voluta-gdb-bt.sh
EXTRA_DIST += voluta-journalctl.sh

