-include $(top_builddir)/common.mk

libvoluta_coredir = $(libdir)
libvoluta_core_LTLIBRARIES = libvoluta_core.la
libvoluta_core_la_LDFLAGS = $(NULL)
libvoluta_core_la_LDFLAGS += $(PTHREAD_CFLAGS) $(PTHREAD_DEF)
libvoluta_core_la_LDFLAGS += -version-info 0
libvoluta_core_la_CPPFLAGS = $(NULL)
libvoluta_core_la_CPPFLAGS += -I$(top_srcdir)/include
libvoluta_core_la_CPPFLAGS += -DVOLUTA_LIBPRIVATE=1
libvoluta_core_la_LIBADD = @LIBS@
libvoluta_core_la_LIBADD += $(PTHREAD_LIBS)
libvoluta_core_la_SOURCES = $(NULL)
libvoluta_core_la_SOURCES += address.c
libvoluta_core_la_SOURCES += aliases.h
libvoluta_core_la_SOURCES += archive.c
libvoluta_core_la_SOURCES += boot.c
libvoluta_core_la_SOURCES += cache.c
libvoluta_core_la_SOURCES += crypto.c
libvoluta_core_la_SOURCES += dir.c
libvoluta_core_la_SOURCES += execfs.c
libvoluta_core_la_SOURCES += file.c
libvoluta_core_la_SOURCES += fuseq.c
libvoluta_core_la_SOURCES += guarantee.c
libvoluta_core_la_SOURCES += init.c
libvoluta_core_la_SOURCES += inlines.h
libvoluta_core_la_SOURCES += inode.c
libvoluta_core_la_SOURCES += itable.c
libvoluta_core_la_SOURCES += libvoluta.h
libvoluta_core_la_SOURCES += mntsrv.c
libvoluta_core_la_SOURCES += mpool.c
libvoluta_core_la_SOURCES += namei.c
libvoluta_core_la_SOURCES += opers.c
libvoluta_core_la_SOURCES += pipe.c
libvoluta_core_la_SOURCES += pstore.c
libvoluta_core_la_SOURCES += qalloc.c
libvoluta_core_la_SOURCES += spmaps.c
libvoluta_core_la_SOURCES += super.c
libvoluta_core_la_SOURCES += symlink.c
libvoluta_core_la_SOURCES += thread.c
libvoluta_core_la_SOURCES += utility.c
libvoluta_core_la_SOURCES += vstore.c
libvoluta_core_la_SOURCES += xattr.c
